--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8099
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/GreetingApplication
 spring.datasource.username=root
 spring.datasource.password=Shivaleela@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
